...
        android:title="@string/title_albums_bnb" />
    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/ic_account_music"
        android:title="@string/title_artists_bnb" />
    <item
        android:id="@+id/collectorsFragment"
        android:icon="@drawable/ic_baseline_android_24"
        android:title="@string/title_collectors_bnb" />
</menu>
