<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CollectorFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collectorsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/collector_item" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:tint="@color/white"
        android:backgroundTint="@color/purple_500"
        android:contentDescription="@string/agregar_premio"
        android:src="@drawable/ic_prize_add_button"/>
</FrameLayout>